--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -13,6 +13,8 @@
     "com.unity.analytics": "3.2.3",
     "com.unity.package-manager-ui": "2.0.8",
     "com.unity.textmeshpro": "1.4.1",
+    "com.unity.xr.arcore": "1.0.0-preview.24",
+    "com.unity.xr.arfoundation": "1.0.0-preview.22",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
     "com.unity.modules.assetbundle": "1.0.0",
